--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/library?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.properties.hibernate=org.hibernate.dialect.MySQL8Dialect
+
 #none, create-only, drop, create-drop, validate, update
 spring.jpa.hibernate.ddl-auto=update
 
