[update] install swagger ui

--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	implementation 'io.springfox:springfox-swagger2:2.9.2'
-	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+	implementation 'io.springfox:springfox-swagger2:2.1.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.1.2'
+	implementation group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '3.0.0'
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.3'
+
 }
 
 tasks.named('test') {
