--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/library?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/library?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.properties.hibernate=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+springfox.documentation.swagger-ui.enabled=true
 
 #none, create-only, drop, create-drop, validate, update
 spring.jpa.hibernate.ddl-auto=update
